--- a/README
+++ b/README
@@ -12,10 +12,13 @@ git-dev-lib
 
 Files  
 =====  
-* [lib.txt](https://github.com/marcilr/git-dev-lib/blob/master/lib.txt)  
-  Libraries  
+lib.txt
+  Libraries
 
-* strftime.txt  
+libmapi/
+  Provides interoperabiolity with Microsoft Exchange
+
+strftime.txt  
   strftime - format date and time  
   http://man7.org/linux/man-pages/man3/strftime.3.html  
 
